--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": ".",
   "scripts": {
     "test": "cross-env NODE_ENV=test DEBUG=true mocha --require babel-polyfill --compilers js:babel-core/register --recursive ./src/**/*.spec.js",
-    "test-watch": "cross-env NODE_ENV=test DEBUG=true mocha --watch --require babel-polyfill --compilers js:babel-core/register --recursive ./src/**/*.spec.js"
+    "test-watch": "cross-env NODE_ENV=test DEBUG=true mocha --watch --require babel-polyfill --compilers js:babel-core/register --recursive ./src/**/*.spec.js",
+    "build": "babel src -d lib",
+    "prepare": "rimraf lib && npm run build"
   },
   "author": "Jamie Nuttall",
   "license": "ISC",
@@ -16,6 +18,7 @@
     "chai": "^4.1.2",
     "cross-env": "^5.0.5",
     "mocha": "^3.5.3",
+    "rimraf": "^2.6.2",
     "sinon": "^3.2.1"
   },
   "dependencies": {
