--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "observable-mqtt",
   "version": "1.0.0",
   "description": "Observable MQTT Client",
-  "main": ".",
+  "main": "./lib/observable-mqtt",
   "scripts": {
     "test": "cross-env NODE_ENV=test DEBUG=true mocha --require babel-polyfill --compilers js:babel-core/register --recursive ./src/**/*.spec.js",
     "test-watch": "cross-env NODE_ENV=test DEBUG=true mocha --watch --require babel-polyfill --compilers js:babel-core/register --recursive ./src/**/*.spec.js",
